--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <label for="symbol">Contém Símbolos</label>
                     <input id="symbol" type="checkbox" />
                 </div>
+                <!--Gerar senha-->
                 <button class="generate" id="generate">
                     Gerar Senha
                 </button>
